# python_api_test

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: config.py  main.py  metrics.py
app/adapters/postgresql/: __init__.py  database.py  models.py  repositories.py
app/application/: tasks.py
app/routes/: health.py  root.py  tasks.py
app/schemas/: responses.py  tasks.py
app/services/: tasks.py
docker/postgres/: init-test-db.sql
migrations/: README.md  env.py
migrations/versions/: 20260722_01_create_tasks.py
observability/grafana/dashboards/: api-latency.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/prometheus/: prometheus.yml
tests/: fakes.py  test_endpoints.py  test_metrics.py  test_postgresql_integration.py  test_task_api.py  test_task_service.py
