[project]
name = "python-api-test"
version = "0.1.0"
description = "A layered FastAPI project for practicing API development."
readme = "README.md"
authors = [
    { name = "Jules Capacillo", email = "jules.capacillo@gmail.com" },
]
requires-python = ">=3.14.6,<3.15"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "prometheus-client>=0.22,<1",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pre-commit>=4.5,<5",
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
addopts = "-ra"
markers = ["integration: requires a running PostgreSQL server"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
